--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Regengers</string>
+    <string name="app_name">The Regengers</string>
     <string name="login">Login</string>
     <string name="ListOfHeroes">List of Heroes</string>
     <string name="small_Login">Click Here To Login</string>
